nextcloud/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:latest
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp /mnt/extra-config/custom.config.php /var/www/html/config/"]
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html/data
            - name: extra-config
              mountPath: /mnt/extra-config
    
    volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-pvc
      - name: extra-config
        configMap:
          name: nextcloud-config
